user can login and email is passed to profile activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="Background">#FAFBFA</color>
     <color name="profileBackground">#E91E63</color>
     <color name="textColor">#333639</color>
+    <color name="BackgroundColor">#FA7A26</color>
 </resources>
